# seating-plan-app

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  LICENSE  MIGRATION_GUIDE.md  README.md  SeatingPlan.spec  pyproject.toml  requirements.txt  run-api.py  run.py  test_checkbox_features.py  test_cleanup_validation.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_undoredo_wiring.py
.github/workflows/: deploy-mac.yml  develop-build.yml  windows-release.yml
docs/: DEVELOPER_GUIDE.md  RELEASE.md  USER_GUIDE.md
examples/: seating_plan_example.json
frontend/: README.md  index.html  package.json  vite.config.js
frontend-react/: README.md  index.html
frontend-react/src/: App.jsx  api.js
frontend-react/src/components/: CanvasStage.jsx  RowRangeDialog.jsx  SectionList.jsx
frontend-react/src/store/: store.js
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: ProjectManager.vue  SeatManager.vue  SeatManagerGrid.vue  SectionManager.vue
requirements/: api.txt  base.txt  gui.txt
src/: gui_app.py  seatingplan.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: projects.py  seatingplans.py  seats.py  sections.py
src/application/: __init__.py  result.py  use_cases.py
src/domain/: __init__.py  exceptions.py
src/infrastructure/: __init__.py
src/models/: seat.py  seating_plan.py  section.py
src/presentation/: __init__.py
src/ui/: dialogs.py  main_window.py  main_window_refactored.py  section_view.py
src/utils/: __init__.py  alphanum_hadler.py  alphanum_handler.py  file_handlers.py  json_io.py
tests/: test_api.py  test_seating_plan.py  test_section.py  test_ui_features.py
tests/ui/: test_ui_features.py
(+44 files in other folders)
