[tool.poetry]
name = "seating-plan-app"
version = "0.1.0"
description = "A GUI application for creating and managing seating plans."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tkinter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"