[tool.poetry]
name = "seating-plan-app"
version = "1.2.0"
description = "A GUI application for creating and managing seating plans."
authors = ["Nicola Vavassori <nicola.vavassori@hotmail.it>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
PyQt6 = "6.10.0"
PyQt6-Qt6 = "6.10.0"
PyQt6_sip = "13.10.2"
openpyxl = "3.1.5"
beautifulsoup4 = "4.14.3"
lxml = "6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"

[tool.poetry.scripts]
seating-plan-app = "run:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"